Camera clipping fixed

--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,4 @@ crashlytics-build.properties
 .vscode/
 *debug.log
 c:\Users\marti\Desktop\FER\UMRIGR\project\My project\.cursor\debug.log
+c:\Users\marti\Desktop\FER\UMRIGR\project\My project\.cursor\debug.log
